Add info popup, noti popup, font-icon

--- a/Index.html
+++ b/Index.html
@@ -39,37 +39,37 @@
                             Menu
                         </div>
                         <select>
-                            <option>Tieng Viet</option>
+                            <option>Tiếng Việt</option>
                             <option>English</option>
                         </select>
                     </div>
                     <div>
                         <div class="item-menu active">
-                            <span class="font-icon-menu"></span>
+                            <span class="font-icon-location"></span>
                             <div>Bản đồ</div>
                         </div>
                         <div class="item-menu">
-                            <span class="font-icon-menu"></span>
+                            <span class="font-icon-analyzic"></span>
                             <div>Phân tích</div>
                         </div>
                     </div>
                     <div>
                         <div class="item-menu">
-                            <span class="font-icon-menu"></span>
+                            <span class="font-icon-news"></span>
                             <div>Tin tức</div>
                         </div>
                         <div class="item-menu">
-                            <span class="font-icon-menu"></span>
+                            <span class="font-icon-info"></span>
                             <div>Giới thiệu</div>
                         </div>
                     </div>
                     <div>
                         <div class="item-menu">
-                            <span class="font-icon-menu"></span>
+                            <span class="font-icon-setting"></span>
                             <div>Cài đặt</div>
                         </div>
                         <div class="item-menu">
-                            <span class="font-icon-menu"></span>
+                            <span class="font-icon-user"></span>
                             <div>Tài khoản</div>
                         </div>
                     </div>
@@ -785,81 +785,108 @@
                 </svg> -->
             </div>
         </div>
-        <div class="infor-control" data-aos="fade-left" data-aos-delay="900">
+        <label for="info-popup-toggle" class="infor-control popup-fixed" data-aos="fade-left" data-aos-delay="850">
+            <input type="checkbox" id="info-popup-toggle" style="display:none;"/>
             <div class="icon">
                 <span class="font-icon-info"></span>
-                <!-- <svg class="icon-svg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M15.1665 8.00033C15.1665 4.04699 11.9532 0.833658 7.99984 0.833658C4.04651 0.833657 0.833171 4.04699 0.833171 8.00032C0.83317 11.9537 4.0465 15.167 7.99984 15.167C11.9532 15.167 15.1665 11.9537 15.1665 8.00033ZM14.1665 8.00033C14.1665 11.4003 11.3998 14.167 7.99984 14.167C4.59984 14.167 1.83317 11.4003 1.83317 8.00032C1.83317 4.60032 4.59984 1.83366 7.99984 1.83366C11.3998 1.83366 14.1665 4.60033 14.1665 8.00033Z" />
-                    <path
-                        d="M8 6.83366C8.27333 6.83366 8.5 7.06033 8.5 7.33366L8.5 10.667C8.5 10.9403 8.27333 11.167 8 11.167C7.72667 11.167 7.5 10.9403 7.5 10.667L7.5 7.33366C7.5 7.06033 7.72667 6.83366 8 6.83366Z" />
-                    <path
-                        d="M7.99984 4.66756C8.0865 4.66756 8.17317 4.68756 8.25317 4.72089C8.33317 4.75423 8.4065 4.80089 8.47317 4.86089C8.53317 4.92756 8.57984 4.99423 8.61317 5.08089C8.6465 5.16089 8.6665 5.24756 8.6665 5.33423C8.6665 5.42089 8.6465 5.50756 8.61317 5.58756C8.57984 5.66756 8.53317 5.74089 8.47317 5.80756C8.4065 5.86756 8.33317 5.91423 8.25317 5.94756C8.09317 6.01423 7.9065 6.01423 7.7465 5.94756C7.6665 5.91423 7.59317 5.86756 7.5265 5.80756C7.4665 5.74089 7.41984 5.66756 7.3865 5.58756C7.35317 5.50756 7.33317 5.42089 7.33317 5.33423C7.33317 5.24756 7.35317 5.16089 7.3865 5.08089C7.41984 4.99423 7.4665 4.92756 7.5265 4.86089C7.59317 4.80089 7.6665 4.75423 7.7465 4.72089C7.8265 4.68756 7.91317 4.66756 7.99984 4.66756Z" />
-                </svg> -->
             </div>
-        </div>
-        <div class="infor-control" data-aos="fade-left" data-aos-delay="900">
+            <div class="noti-popup-content">
+                <div class="content">
+                    <div class="header-popup">
+                        <div class="title">Chú thích</div>
+                        <div>
+                            <div>Đóng</div>
+                            <span class="font-icon-close"></span>
+                        </div>
+                    </div>
+                    <div class="item-noti ">
+                        <div>
+                            <span>
+                                <div class="title-medium">Dữ liệu trạm là gì?</div>
+                            </span>
+                            <div class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </div>
+                        </div>
+                    </div>
+                    <div class="item-noti ">
+                        <div>
+                            <span>
+                                <div class="title-medium">Dữ liệu vệ tinh là gì?</div>
+                            </span>
+                            <div class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </div>
+                        </div>
+                    </div>
+                    <div class="item-noti ">
+                        <div>
+                            <span>
+                                <div class="title-medium">Dữ liệu WRF là gì?</div>
+                            </span>
+                            <div class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </div>
+                        </div>
+                    </div>
+                </div>
+                <svg width="12" height="54" viewBox="0 0 12 54" fill="none">
+                    <path d="M3 16C4.78977 19.485 8.71785 23.2757 11.0832 25.3726C12.0467 26.2266 12.0467 27.7734 11.0832 28.6274C8.71785 30.7243 4.78977 34.515 2.99999 38C0.0957327 43.6551 -1.18021e-05 54 -1.18021e-05 54L0 -2.84124e-06C0 -2.84124e-06 0.09574 10.3449 3 16Z" fill="white"/>
+                </svg>
+            </div>
+        </label>
+        <label for="noti-popup-toggle" class="infor-control" data-aos="fade-left" data-aos-delay="900">
+            <input type="checkbox" id="noti-popup-toggle" style="display:none;"/>
             <div class="icon">
-                <span class="font-icon-info"></span>
-                <div class="badge"></div>
+                <span class="font-icon-bell"></span>
             </div>
-        </div>
+            <div class="badge">2</div>
+            <div class="noti-popup-content">
+                <div class="content">
+                    <div class="header-popup">
+                        <div class="title">Thông báo</div>
+                        <div>
+                            <div>Cài đặt</div>
+                            <span class="font-icon-setting"></span>
+                        </div>
+                    </div>
+                    <div class="item-noti ">
+                        <div class="status "></div>
+                        <span class="font-icon-bell"></span>
+                        <div>
+                            <span>
+                                <div class="title-medium">Thông báo</div>
+                                <span> 20:40, 16/06/2022 </span>
+                            </span>
+                            <div class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
+                        </div>
+                    </div>
+                    <div class="item-noti">
+                        <div class="status"></div>
+                        <span class="font-icon-bell"></span>
+                        <div>
+                            <span>
+                                <div class="title-medium">Thông báo</div>
+                                <span> 20:40, 16/06/2022 </span>
+                            </span>
+                            <div class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
+                        </div>
+                    </div>
+                    <div class="item-noti seen">
+                        <div class="status"></div>
+                        <span class="font-icon-bell"></span>
+                        <div>
+                            <span>
+                                <div class="title-medium">Thông báo</div>
+                                <span> 20:40, 16/06/2022 </span>
+                            </span>
+                            <div class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
+                        </div>
+                    </div>
+                </div>
+                <svg width="12" height="54" viewBox="0 0 12 54" fill="none">
+                    <path d="M3 16C4.78977 19.485 8.71785 23.2757 11.0832 25.3726C12.0467 26.2266 12.0467 27.7734 11.0832 28.6274C8.71785 30.7243 4.78977 34.515 2.99999 38C0.0957327 43.6551 -1.18021e-05 54 -1.18021e-05 54L0 -2.84124e-06C0 -2.84124e-06 0.09574 10.3449 3 16Z" fill="white"/>
+                </svg>
+            </div>
+        </label>
     </div>
     <div class="time-slider">
         <div class="slider-container">
-            <!--<div class="play-btn" onclick="Play()">
-                <div class="icon">
-                    <span class="font-icon-play"></span>
-                </div>
-            </div>
-            <div class="slider">
-                <div class="slider-bg"></div>
-                <div class="slider-step">
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                    <div class="step">
-                        <div class="line"></div>
-                        <div class="time">07:40</div>
-                    </div>
-                </div>
-                <div class="slider-run">
-                    <div class="point-drag"></div>
-                </div>
-            </div>
-            <div class="play-btn">
-                <div class="icon" onclick="Back()">
-                    <span class="font-icon-left"></span>
-                </div>
-                <div class="time-selected">18:30</div>
-                <div class="icon" onclick="Next()">
-                    <span class="font-icon-right"></span>
-                </div>
-            </div>-->
-
         </div>
-
         <div class="note" data-aos="fade-left" data-aos-delay="900">
             <div class="line"></div>
             <div class="number">
@@ -886,6 +913,7 @@
                 e.preventDefault();
                 $(".main-popup").toggleClass("active");
                 $(".time-slider").toggleClass("full-width");
+                __timeSlider.update();
             });
             $(".tab").click(function (e) {
                 e.preventDefault();
