--- a/Index.html
+++ b/Index.html
@@ -309,7 +309,7 @@
                                     </div> -->
                                 </div>
                             </div>
-                        </dilabelv>
+                        </label>
                        
                     </div>
                    
