add Forgot password button

--- a/Index.html
+++ b/Index.html
@@ -185,7 +185,13 @@
                                                 </svg>
                                                 <div>Email hoặc mật khẩu không đúng!</div>
                                             </div>
-                                            <input class="input-submit" type="submit" value="Login now">
+                                            <div class="btn-popup">
+                                                <div class="pop-btn">
+                                                    <span class="font-icon-lock"></span>
+                                                    <div>Forgot password?</div>
+                                                </div>
+                                                <input class="input-submit" type="submit" value="Login now">
+                                            </div>
                                         </form> 
                                         <div class="login-information" >
                                             <div>Bạn chưa có tài khoản?</div>
