--- a/Index.html
+++ b/Index.html
@@ -69,60 +69,62 @@
                             <span class="font-icon-setting1"></span>
                             <div>Cài đặt</div>
                             <div class="popup-overlay popup-setting">
-                                <div class="popup">
-                                    <div class="popup-header">
-                                        <span class="font-icon-setting1"></span>
-                                        <div>Cài đặt</div>
-                                    </div>
-                                    <div class="popup-content">
-                                        <div class="item-setting active">
-                                            <span class="font-icon-bell"></span>
-                                            <div>
-                                                <div class="item-setting-label">Notification</div>
-                                                <div class="item-setting-discription">Allow system send alert with your email </div>
-                                            </div>
-                                            <label class="switch">
-                                                <input type="checkbox" checked>
-                                                <span class="slider round"></span>
-                                            </label>
+                                <div class="popup-container">
+                                    <div class="popup">
+                                        <div class="popup-header">
+                                            <span class="font-icon-setting1"></span>
+                                            <div>Cài đặt</div>
                                         </div>
-                                        <div class="item-setting">
-                                            <div>
-                                                <div class="item-setting-label">Units</div>
-                                                <div class="item-setting-discription">Lorem Ipsum is simply dummy text of the printing  </div>
-                                                <div class="item-setting-select">
-                                                    <div>
-                                                        <span>Temperature</span>
+                                        <div class="popup-content">
+                                            <div class="item-setting active">
+                                                <span class="font-icon-bell"></span>
+                                                <div>
+                                                    <div class="item-setting-label">Notification</div>
+                                                    <div class="item-setting-discription">Allow system send alert with your email </div>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" checked>
+                                                    <span class="slider round"></span>
+                                                </label>
+                                            </div>
+                                            <div class="item-setting">
+                                                <div>
+                                                    <div class="item-setting-label">Units</div>
+                                                    <div class="item-setting-discription">Lorem Ipsum is simply dummy text of the printing  </div>
+                                                    <div class="item-setting-select">
                                                         <div>
-                                                            <div class="active">C</div>
-                                                            <div>F</div>
+                                                            <span>Temperature</span>
+                                                            <div>
+                                                                <div class="active">C</div>
+                                                                <div>F</div>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                    <div>
-                                                        <span>Wind speed</span>
                                                         <div>
-                                                            <div class="active">km/h</div>
-                                                            <div>m/s</div>
+                                                            <span>Wind speed</span>
+                                                            <div>
+                                                                <div class="active">km/h</div>
+                                                                <div>m/s</div>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                    <div>
-                                                        <span>Index PM 2.5</span>
                                                         <div>
-                                                            <div class="active">µg/m³</div>
-                                                            <div></div>
+                                                            <span>Index PM 2.5</span>
+                                                            <div>
+                                                                <div class="active">µg/m³</div>
+                                                                <div></div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
+                                           
                                         </div>
-                                       
-                                    </div>
-                                    <div class="popup-footer">
-                                        <div class="pop-btn inactive">
-                                            <div>Hủy</div>
-                                        </div>
-                                        <div class="pop-btn">
-                                            <div>Lưu</div>
+                                        <div class="popup-footer">
+                                            <div class="pop-btn inactive">
+                                                <div>Hủy</div>
+                                            </div>
+                                            <div class="pop-btn">
+                                                <div>Lưu</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
