--- a/Login.html
+++ b/Login.html
@@ -21,8 +21,8 @@
 </head>
 
 <body class="">
-    <div class="popup-overlay popup-login step-by-step">
-        <div class="popup-container">
+    <div class="login-overlay popup-overlay popup-login ">
+        <div class="popup-container ">
             <!-- Login -->
             <div class="popup">
                 <div class="title-login">
