--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
                                                 </div>
                                                 <label class="switch">
                                                     <input type="checkbox" checked>
-                                                    <span class="slider round"></span>
+                                                    <span class="slider-btn round"></span>
                                                 </label>
                                             </div>
                                             <div class="item-setting">
